# tsetlin.py

./: .gitignore  .gitmodules  NILM.md  Pipfile  README.md  app.py  best_model.pb  best_model_1_bit.pb  best_model_2_bit.pb  best_model_4_bit.pb  best_model_8_bit.pb  iris.py  main.py  main_mnist.py  main_mnist_compressed.py  main_mnist_corrupted.py  main_plot_trace.py  main_redd.py  main_tmu.py  main_tmu_mnist.py  main_tmu_mnist_c.py  main_tmu_redd.py  main_ui.py  pyproject.toml  requirements.txt  trace_pb2.py  tsetlin_model.pb  tsetlin_pb2.py  tsetlin_upb2.py
dataset/: .gitignore  NILM_dataset.ipynb  README.md  nilmtk_redd.ipynb  nilmtk_redd_fix.ipynb  nilmtk_redd_hart85.ipynb  pyproject.toml
dataset/simuator/: README.md  server.py
dataset/simuator/micropython/: boot.py
dataset/simulator/: README.md  client.py  data.py  pyproject.toml
dataset/simulator/micropython/: boot.py
dataset/simulator/mpy-offline/: main.py
dataset/simulator/mpy-online/: sysfont.py
model/: README.md  Researh.md  client.py  detector.py  main_edge_detection.py  main_edge_detection_csv.py  main_edge_detection_h5.py  main_redd_train_data.py  nilmtk_redd_co.ipynb  nilmtk_redd_exp_api.ipynb  nilmtk_redd_fhmm.ipynb  nilmtk_redd_hart85.ipynb  pyproject.toml  redd_dataset.py  redd_dataset_csv.py  redd_dataset_h5.py  redd_dataset_train_csv.py
model/mpy-offline/: main.py
protobuf/: .gitignore  README.md  pyproject.toml  trace.proto  tsetlin.proto  tsetlin.uproto  tsetlin_upb2.py  uprotobuf.py
tests/: test_automaton.py  test_booleanize.py  test_clause.py  test_norm.py  test_protobuf.py
tsetlin/: __init__.py  automaton.py  clause.py  tsetlin.py
tsetlin/utils/: __init__.py  booleanize.py  dataset.py  log.py  math.py  norm.py  split.py  tqdm.py
