[project]
name = "tsetlin-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mnist>=0.2.2",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "pandas>=2.3.3",
    "pretty-confusion-matrix>=0.6.0",
    "protobuf>=6.32.1",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "stqdm>=0.0.5",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]
