[project]
name = "tsetlin-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "protobuf>=6.32.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mnist>=0.2.2",
    "matplotlib>=3.10.6",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "streamlit>=1.50.0",
    "stqdm>=0.0.5",
    "pretty-confusion-matrix>=0.6.0",
    "mpremote>=1.26.1",
    "esptool>=5.1.0",
    "tmu @ git+https://github.com/cair/tmu.git",
    "pandas>=2.3.3",
    "tensorflow-datasets>=4.9.9",
    "tensorflow>=2.20.0",
    "black>=25.9.0",
]
