[project]
name = "tsetlin-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "protobuf>=6.32.1",
    "pandas",
    "nilmtk @ git+https://github.com/nilmtk/nilmtk.git",
    "tmu @ git+https://github.com/cair/tmu.git",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.7",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "matplotlib",
    "pretty-confusion-matrix",
    "jupyter",
]
